--- a/CNNTUTO.ipynb
+++ b/CNNTUTO.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNT9P1xESv4R+uB3/y34HQ9",
+      "authorship_tag": "ABX9TyNneMvdedUkHxv3ZcTAoq5u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,21 +31,493 @@
     {
       "cell_type": "code",
       "source": [
-        "import torch"
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "from torch.utils.data import DataLoader\n",
+        "from torchvision import datasets, transforms\n",
+        "from torchvision.utils import make_grid\n",
+        "\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "import matplotlib.pyplot as plt\n",
+        "%matplotlib inline"
       ],
       "metadata": {
         "id": "uz1mT-_2orNo"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Convert MNIST Image Files into a Tensor of 4-Dimensions (# of images, Height, Width, Color Channels)\n",
+        "transform = transforms.ToTensor()"
+      ],
       "metadata": {
         "id": "ILyAupJMoq8w"
       },
-      "execution_count": null,
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Train Data\n",
+        "train_data = datasets.MNIST(root='/cnntuto_data', train=True, download=True, transform=transform)"
+      ],
+      "metadata": {
+        "id": "zF9TriL25nHk",
+        "outputId": "ab35939f-1331-4b4c-a498-5dc0fd96cbf6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 9.91M/9.91M [00:01<00:00, 5.10MB/s]\n",
+            "100%|██████████| 28.9k/28.9k [00:00<00:00, 134kB/s]\n",
+            "100%|██████████| 1.65M/1.65M [00:01<00:00, 1.27MB/s]\n",
+            "100%|██████████| 4.54k/4.54k [00:00<00:00, 8.27MB/s]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_data\n"
+      ],
+      "metadata": {
+        "id": "fKClZdQa7OnI",
+        "outputId": "17ac9502-eb11-44ed-ef25-c6a548e98f6f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Dataset MNIST\n",
+              "    Number of datapoints: 60000\n",
+              "    Root location: /cnntuto_data\n",
+              "    Split: Train\n",
+              "    StandardTransform\n",
+              "Transform: ToTensor()"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Test Data\n",
+        "test_data = datasets.MNIST(root='/cnntuto_data', train=False, download=True, transform=transform)"
+      ],
+      "metadata": {
+        "id": "kQCjKrfV7XLx"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_data"
+      ],
+      "metadata": {
+        "id": "qlr9a28p7oN6",
+        "outputId": "28b0d3cf-7922-4a9b-c321-a035ca48b5e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Dataset MNIST\n",
+              "    Number of datapoints: 10000\n",
+              "    Root location: /cnntuto_data\n",
+              "    Split: Test\n",
+              "    StandardTransform\n",
+              "Transform: ToTensor()"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a small batch size for images...let's say 10\n",
+        "train_loader = DataLoader(train_data, batch_size=10, shuffle=True)\n",
+        "test_loader = DataLoader(test_data, batch_size=10, shuffle=False)"
+      ],
+      "metadata": {
+        "id": "rgycYUhOFAM9"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define Our CNN Model\n",
+        "# Describe convolutional layer and what it's doing (2 convolutional layers)\n",
+        "# This is just an example in the next video we'll build out the actual model\n",
+        "conv1 = nn.Conv2d(1, 8, 3, 1)\n",
+        "conv2 = nn.Conv2d(8, 16, 3, 1)"
+      ],
+      "metadata": {
+        "id": "P_khTNyzFUi6"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Grab 1 MNIST record/image\n",
+        "for i, (X_Train, y_train) in enumerate(train_data):\n",
+        "  break"
+      ],
+      "metadata": {
+        "id": "S6jfYiehFXOM"
+      },
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_Train.shape\n"
+      ],
+      "metadata": {
+        "id": "SZ3u0wNTFZkT",
+        "outputId": "b3b0a20c-f739-49bd-e7e6-c8b58264c742",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 28, 28])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " x = X_Train.view(1,1,28,28)\n",
+        "x.shape"
+      ],
+      "metadata": {
+        "id": "IlgyU2bTFfgk",
+        "outputId": "ed4f65c9-d347-4309-e528-33195af28793",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 1, 28, 28])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Perform our first convolution\n",
+        "x = F.relu(conv1(x)) # Rectified Linear Unit for our activation function"
+      ],
+      "metadata": {
+        "id": "gPZrfgNIGYrD"
+      },
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1 single image, 6 is the filters we asked for, 26x26\n",
+        "x.shape"
+      ],
+      "metadata": {
+        "id": "T4z2nK44JD7e",
+        "outputId": "d195ff36-dc43-41ed-b990-8a633c5920d1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 16, 5, 5])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# pass thru the pooling layer\n",
+        "x = F.max_pool2d(x,2,2) # kernal of 2 and stride of 2"
+      ],
+      "metadata": {
+        "id": "Bxl3qIkZKc6a"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.shape # 26 / 2 = 13"
+      ],
+      "metadata": {
+        "id": "Z_jEfvtNKfv8",
+        "outputId": "46e94f58-329f-486c-a47e-f585d13ad88b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 8, 13, 13])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Do our second convolutional layer\n",
+        "x = F.relu(conv2(x))"
+      ],
+      "metadata": {
+        "id": "rJqKnv8pKr1r"
+      },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.shape # Again, we didn't set padding so we lose 2 pixles around the outside of the image"
+      ],
+      "metadata": {
+        "id": "OjmIfqFYKymz",
+        "outputId": "a9d4da25-7909-4b2d-ac37-f25205beac16",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 16, 11, 11])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Pooling layer\n",
+        "x = F.max_pool2d(x,2,2)"
+      ],
+      "metadata": {
+        "id": "XvfnPIDQK_7D"
+      },
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.shape"
+      ],
+      "metadata": {
+        "id": "cT3xtBHMLDD8",
+        "outputId": "a9cf7cae-0f58-4d5c-bcbe-a40cc45e08aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 16, 5, 5])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "((28-2) / 2 - 2) / 2"
+      ],
+      "metadata": {
+        "id": "Npfri-tsL8EE",
+        "outputId": "ac804d00-fca8-43dd-f17d-0342f78e2377",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Model Class\n",
+        "class ConvolutionalNetwork(nn.Module):\n",
+        "  def __init__(self):\n",
+        "    super().__init__()\n",
+        "    self.conv1 = nn.Conv2d(1,6,3,1)\n",
+        "    self.conv2 = nn.Conv2d(6,16,3,1)\n",
+        "    # Fully Connected Layer\n",
+        "    self.fc1 = nn.Linear(5*5*16, 120)\n",
+        "    self.fc2 = nn.Linear(120, 84)\n",
+        "    self.fc3 = nn.Linear(84, 10)\n",
+        "\n",
+        "  def forward(self, X):\n",
+        "    X = F.relu(self.conv1(X))\n",
+        "    X = F.max_pool2d(X,2,2) # 2x2 kernal and stride 2\n",
+        "    # Second Pass\n",
+        "    X = F.relu(self.conv2(X))\n",
+        "    X = F.max_pool2d(X,2,2) # 2x2 kernal and stride 2\n",
+        "\n",
+        "    # Re-View to flatten it out\n",
+        "    X = X.view(-1, 16*5*5) # negative one so that we can vary the batch size\n",
+        "\n",
+        "    # Fully Connected Layers\n",
+        "    X = F.relu(self.fc1(X))\n",
+        "    X = F.relu(self.fc2(X))\n",
+        "    X = self.fc3(X)\n",
+        "    return F.log_softmax(X, dim=1)"
+      ],
+      "metadata": {
+        "id": "OhBAA4e6OTgj"
+      },
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create an Instance of our Model\n",
+        "torch.manual_seed(41)\n",
+        "model = ConvolutionalNetwork()\n",
+        "model"
+      ],
+      "metadata": {
+        "id": "f-lTBtInU8Yz",
+        "outputId": "1d4fd992-9934-45bc-ad8e-66e1ac0e8d7e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "ConvolutionalNetwork(\n",
+              "  (conv1): Conv2d(1, 6, kernel_size=(3, 3), stride=(1, 1))\n",
+              "  (conv2): Conv2d(6, 16, kernel_size=(3, 3), stride=(1, 1))\n",
+              "  (fc1): Linear(in_features=400, out_features=120, bias=True)\n",
+              "  (fc2): Linear(in_features=120, out_features=84, bias=True)\n",
+              "  (fc3): Linear(in_features=84, out_features=10, bias=True)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 61
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Loss Function Optimizer\n",
+        "criterion = nn.CrossEntropyLoss()\n",
+        "optimizer = torch.optim.Adam(model.parameters(), lr=0.001) # Smaller the Learning Rate, longer its gonna take to train."
+      ],
+      "metadata": {
+        "id": "d1o4aV3pVB0Q"
+      },
+      "execution_count": 62,
       "outputs": []
     }
   ]
