--- a/mobilevit_kfold.ipynb
+++ b/mobilevit_kfold.ipynb
@@ -1870,7 +1870,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Training:  31%|███       | 31/100 [10:30<25:11, 21.91s/it]"
+            "Training:  48%|████▊     | 48/100 [15:58<16:02, 18.51s/it]"
           ]
         }
       ]
